# mhnu

./: .env.example  .gitignore  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  dev.Dockerfile  entrypoint.sh  manage.py  prod.Dockerfile  pyproject.toml  requirements.txt  setup.cfg
backend/.docker-entrypoint-initdb.d/: init_db.sh
backend/.docker-entrypoint-initdb.d/dumps/: mhnu.dump
backend/MHNU/: asgi.py  celery.py  urls.py  wsgi.py
backend/MHNU/settings/: base.py  local.py  prod.py
backend/import_export_celery/: admin.py  admin_actions.py  apps.py  signals.py  tasks.py
backend/import_export_celery/migrations/: 0001_initial.py
backend/import_export_celery/models/: __init__.py  exportjob.py  importjob.py
backend/mhnu/: asgi.py  celery.py  urls.py  wsgi.py
backend/mhnu/settings/: base.py
backend/museum/: admin.py  apps.py  models.py  resources.py  tasks.py  urls.py  utils.py  validators.py  views.py
backend/museum/api/: filters.py  serializers.py  views.py
backend/museum/migrations/: 0001_initial.py  0002_record_additional_data.py  0003_slider.py  0004_alter_slider_options.py  0005_alter_slider_order.py  0006_delete_slider.py  0007_record_slug.py
backend/templates/: custom_change_form.html
backend/users/: admin.py  models.py  tests.py
backend/users/migrations/: 0001_initial.py
backend/utils/: apps.py  models.py  tasks.py
backend/web/: admin.py  models.py  serializers.py  urls.py  views.py
backend/web/migrations/: 0001_initial.py  0002_member.py  (+7 more)
(+137 files in other folders)
